// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JS Components/Tooltip Central smoke-test 1`] = `
<div class="w-256 h-256 flex items-center justify-center m-24 border mx-auto rounded-lg">
  <button data-state="closed">
    <div class="inline-flex ml-8 ">
      <button>
        <svg class="text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <use xlink:href="#sprite-icon-gui-info">
          </use>
        </svg>
      </button>
    </div>
  </button>
</div>
`;

exports[`JS Components/Tooltip Interactive smoke-test 1`] = `
<div class="w-256 h-256 flex items-center justify-center m-24 border mx-auto rounded-lg">
  <button data-state="closed">
    <div class="inline-flex ml-8 ">
      <button>
        <svg class="text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <use xlink:href="#sprite-icon-gui-info">
          </use>
        </svg>
      </button>
    </div>
  </button>
</div>
`;

exports[`JS Components/Tooltip LeftBound smoke-test 1`] = `
<div class="w-256 h-256 flex items-center m-24 border mx-auto rounded-lg">
  <button data-state="closed">
    <div class="inline-flex ml-8 ">
      <button>
        <svg class="text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <use xlink:href="#sprite-icon-gui-info">
          </use>
        </svg>
      </button>
    </div>
  </button>
</div>
`;
